--- a/LOHAS/project.private.config.json
+++ b/LOHAS/project.private.config.json
@@ -31,7 +31,7 @@
           "scene": null
         },
         {
-          "name": "商品管理",
+          "name": "临期商品管理",
           "pathName": "pages/product/ddl_product/ddl_product",
           "query": "",
           "scene": null
@@ -39,6 +39,7 @@
         {
           "name": "发布商品",
           "pathName": "pages/product/ddl_product/create_ddl_product",
+          "query": "",
           "scene": null
         }
       ]
