--- a/LOHAS/project.private.config.json
+++ b/LOHAS/project.private.config.json
@@ -63,6 +63,12 @@
         {
           "name": "发布折扣商品",
           "pathName": "pages/product/forsale_product/create_forsale_product",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "编辑个人信息",
+          "pathName": "pages/user/update",
           "scene": null
         }
       ]
