--- a/LOHAS/project.private.config.json
+++ b/LOHAS/project.private.config.json
@@ -61,14 +61,21 @@
           "scene": null
         },
         {
-          "name": "发布折扣商品",
-          "pathName": "pages/product/forsale_product/create_forsale_product",
+          "name": "编辑个人信息",
+          "pathName": "pages/user/update",
           "query": "",
           "scene": null
         },
         {
-          "name": "编辑个人信息",
-          "pathName": "pages/user/update",
+          "name": "盲盒管理",
+          "pathName": "pages/product/mystery_box/mystery_box",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "更新盲盒",
+          "pathName": "pages/product/mystery_box/update",
+          "query": "",
           "scene": null
         }
       ]
