--- a/LOHAS/app.json
+++ b/LOHAS/app.json
@@ -28,21 +28,21 @@
     "van-col": "./dist/col/index",
     "van-button": "./dist/button/index",
     "van-card": "./dist/card/index",
-    "van-field": "dist/field/index",
-    "van-swipe-cell": "dist/swipe-cell/index",
-    "van-dialog": "dist/dialog/index",
-    "van-uploader": "dist/uploader/index",
-    "van-calendar": "dist/calendar/index",
-    "van-popup": "dist/popup/index",
-    "van-cell": "dist/cell/index",
-    "van-cell-group": "dist/cell-group/index",
-    "van-datetime-picker": "dist/datetime-picker/index",
-    "van-picker": "dist/picker/index",
-    "van-toast": "dist/toast/index",
-    "van-divider": "dist/divider/index",
-    "van-icon": "dist/icon/index",
-    "van-image": "dist/image/index",
-    "van-submit-bar": "dist/submit-bar/index"
+    "van-field": "./dist/field/index",
+    "van-swipe-cell": "./dist/swipe-cell/index",
+    "van-dialog": "./dist/dialog/index",
+    "van-uploader": "./dist/uploader/index",
+    "van-calendar": "./dist/calendar/index",
+    "van-popup": "./dist/popup/index",
+    "van-cell": "./dist/cell/index",
+    "van-cell-group": "./dist/cell-group/index",
+    "van-datetime-picker": "./dist/datetime-picker/index",
+    "van-picker": "./dist/picker/index",
+    "van-toast": "./dist/toast/index",
+    "van-divider": "./dist/divider/index",
+    "van-icon": "./dist/icon/index",
+    "van-image": "./dist/image/index",
+    "van-submit-bar": "./dist/submit-bar/index"
   },
   "tabBar": {
     "color": "#a9b7b7",
@@ -64,7 +64,6 @@
     ]
   },
   "sitemapLocation": "sitemap.json",
-  "style": "v2",
   "permission": {
     "scope.userLocation": {
       "desc": "你的位置信息将用于小程序定位"
